--- a/app/src/main/res/layout-hdpi/fragment_home_status_.xml
+++ b/app/src/main/res/layout-hdpi/fragment_home_status_.xml
@@ -26,6 +26,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
             >
 
             <TextView
@@ -54,7 +55,7 @@
                 ></TextView>
 
             <ImageView
-                android:id="@+id/addexcercise_private"
+                android:id="@+id/update_kg"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:gravity="center"
@@ -74,7 +75,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="ระดับรับประทานอาหารตอนนี้"
-            android:layout_weight="0.9"
+            android:layout_weight="1.3"
             android:paddingLeft="10dp"
             ></TextView>
             <TextView
@@ -82,12 +83,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="ไม่มีข้อมูล"
-                android:layout_weight="1.5"
-                ></TextView>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text=""
                 android:layout_weight="1.5"
                 ></TextView>
         </LinearLayout>
@@ -156,6 +151,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:layout_marginBottom="10dp"
             >
 
             <TextView
