--- a/app/src/main/res/layout-hdpi/fragment_home_status_.xml
+++ b/app/src/main/res/layout-hdpi/fragment_home_status_.xml
@@ -151,7 +151,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginBottom="10dp"
+
             >
 
             <TextView
@@ -182,14 +182,14 @@
             android:orientation="vertical"
             android:layout_marginBottom="5dp"
             >
+
             <TextView
                 android:id="@+id/textset"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text=""
-                android:visibility="invisible"
                 android:paddingLeft="20dp"
-                ></TextView>
+                android:text=""
+                android:visibility="invisible"></TextView>
         </LinearLayout>
     </RelativeLayout>
 
