refactor(mobile):keep detail

--- a/app/src/main/res/layout/activity_totalkcal__user.xml
+++ b/app/src/main/res/layout/activity_totalkcal__user.xml
@@ -8,132 +8,212 @@
     android:gravity="center"
     android:background="@drawable/all_background">
 
-    <LinearLayout
+    <include
+        android:id="@+id/totalkcal"
+        layout="@layout/app_totalcal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:id="@+id/text"
-        android:orientation="horizontal"
-        android:layout_marginBottom="30sp"
+        android:layout_height="50dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"></include>
+
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/totalkcal"
+
        >
 
-        <TextView
-            android:id="@+id/status"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#ffffff"
-            android:text="สถานะของคุณ :"
-            android:textSize="25sp"
-            >
-        </TextView>
-
-
-        <TextView
-            android:id="@+id/statusname"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=" Null"
-            android:textColor="#ffffff"
-            android:textSize="30sp"
-            >
-        </TextView>
-
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:id="@+id/totalkcallaout"
-        android:layout_marginBottom="30sp"
-        android:layout_below="@id/text"
-      >
-
-        <TextView
-            android:id="@+id/totalkcal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#ffffff"
-            android:text="เเคลลอรี่ทั้งหมดต่อวัน : "
-            android:textSize="25sp"
-            >
-        </TextView>
-
-
-
-        <TextView
-            android:id="@+id/numberkcal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Null"
-            android:textColor="#ffffff"
-            android:textSize="30sp"
-            >
-        </TextView>
-
-        <TextView
-            android:id="@+id/textkcal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=" kcal"
-            android:textColor="#ffffff"
-            android:textSize="30sp"
-            >
-        </TextView>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_below="@id/totalkcallaout"
-        android:id="@+id/button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20sp"
-        android:gravity="center"
-     >
-
-        <Button
-            android:id="@+id/start"
-            android:text="เริ่มการใช้งาน"
+        <LinearLayout
+            android:id="@+id/text"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textColor="#ffffff"
-            android:background="@drawable/button_login_style"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            ></Button>
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20sp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
+            android:orientation="horizontal">
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/status"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="สถานะร่างกายของคุณ : "
+                android:textColor="#ffffff"
+                android:textSize="20sp"></TextView>
 
-    <LinearLayout
-        android:id="@+id/L8"
-        android:layout_marginTop="40sp"
-        android:layout_below="@id/button"
+
+            <TextView
+                android:id="@+id/statusname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=" Null"
+                android:textColor="#ffffff"
+                android:textSize="20sp"></TextView>
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/totalkcallaout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/text"
+            android:layout_marginBottom="20sp"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/totalkcal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="ค่า BMR ของคุณตอนนี้ : "
+                android:textColor="#ffffff"
+                android:textSize="20sp"></TextView>
+
+
+            <TextView
+                android:id="@+id/numberkcalBMR"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Null"
+                android:textColor="#ffffff"
+                android:textSize="20sp"></TextView>
+
+            <TextView
+                android:id="@+id/textkcalBMR"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=" kcal"
+                android:textColor="#ffffff"
+                android:textSize="20sp"></TextView>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/totalTDEE"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/totalkcallaout"
+            android:layout_marginBottom="20sp"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/totalkcalTDEE"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="ค่า TDEE ของคุณตอนนี้ : "
+                android:textColor="#ffffff"
+                android:textSize="20sp"></TextView>
+
+
+            <TextView
+                android:id="@+id/numberkcalTDEE"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Null"
+                android:textColor="#ffffff"
+                android:textSize="20sp"></TextView>
+
+            <TextView
+                android:id="@+id/textkcal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=" kcal"
+                android:textColor="#ffffff"
+                android:textSize="20sp"></TextView>
+
+        </LinearLayout>
+
+
+        <LinearLayout
+        android:id="@+id/textShow_recomment_f"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_horizontal"
-        >
+        android:layout_below="@id/totalTDEE"
+            android:layout_marginTop="20dp"
+        android:layout_marginBottom="30sp"
+        android:orientation="vertical">
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
         <TextView
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_margin="20dp"
-            android:background="@drawable/non_color_step_register"
-            ></TextView>
-        <TextView
-            android:layout_width="20dp"
-            android:layout_margin="20dp"
-            android:layout_height="20dp"
-            android:background="@drawable/non_color_step_register"
-            ></TextView>
-        <TextView
-            android:layout_width="20dp"
-            android:layout_margin="20dp"
-            android:layout_height="20dp"
-            android:background="@drawable/color_step_register"
-            ></TextView>
+            android:id="@+id/headtext"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="การลดน้ำหนัก"
+            android:paddingLeft="10dp"
+            android:textColor="#ffffff"
+            android:textSize="20sp"></TextView>
+</RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/recommenttext"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:paddingLeft="10dp"
+                    android:text="คุณควรรับประทานอาหารให้ครบ 3 มื้อโดยการรับประทานอาหารให้ถึงค่า BMR เเต่ไม่ควรรับประทานอาหารเกินค่า TDEE เเละถ้าออกกำลังกายควบคู่จะสามารถลดน้ำหนัดได้เร็วขึ้น"
+                    android:textColor="#ffffff"
+                    android:textSize="20sp"></TextView>
+            </RelativeLayout>
     </LinearLayout>
+
+
+        <LinearLayout
+            android:id="@+id/button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/textShow_recomment_f"
+            android:layout_marginTop="20sp"
+            >
+
+            <Button
+                android:id="@+id/start"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:background="@drawable/button_login_style"
+                android:text="เริ่มการใช้งาน"
+                android:textColor="#ffffff"></Button>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/L8"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/button"
+            android:layout_marginTop="40sp"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_margin="20dp"
+                android:background="@drawable/non_color_step_register"></TextView>
+
+            <TextView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_margin="20dp"
+                android:background="@drawable/non_color_step_register"></TextView>
+
+            <TextView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_margin="20dp"
+                android:background="@drawable/color_step_register"></TextView>
+        </LinearLayout>
+
+    </RelativeLayout>
 </RelativeLayout>
