--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="red">#262626</color>
     <color name="colorcarenda">#5252e0</color>
     <color name="gray">#e6e6e6</color>
+    <color name="oreng">#ff751a</color>
 </resources>
