--- a/app/src/main/res/layout/fragment_home_listexcersice_.xml
+++ b/app/src/main/res/layout/fragment_home_listexcersice_.xml
@@ -25,6 +25,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
+                android:layout_marginTop="5dp"
                 >
                 <TextView
                     android:id="@+id/TVam"
@@ -48,6 +49,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
+                android:layout_marginTop="5dp"
                 android:orientation="vertical"
                 >
                 <TextView
@@ -75,6 +77,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
+                android:layout_marginTop="5dp"
                 android:orientation="vertical"
                 >
                 <TextView
