--- a/app/src/main/res/layout/activity_selectelistfood_user_private.xml
+++ b/app/src/main/res/layout/activity_selectelistfood_user_private.xml
@@ -7,6 +7,35 @@
     android:background="@drawable/all_background"
     tools:context=".selectelistfood_user_private">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="invisible"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="#33cc33"
+        android:id="@+id/baranimation"
+        >
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="3"
+            android:src="@drawable/ic_check_circle_black_24dp"
+            android:layout_gravity="center_horizontal"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:textSize="15dp"
+            android:text="ข้อมูลได้ถูกบันทึกเเล้ว"
+            ></TextView>
+
+    </LinearLayout>
 
     <include
         android:id="@+id/searchView"
@@ -16,6 +45,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"></include>
+
+
+
 
 
     <EditText
