--- a/app/src/main/res/layout/app_selectexcercise.xml
+++ b/app/src/main/res/layout/app_selectexcercise.xml
@@ -41,14 +41,12 @@
         android:id="@+id/buttonexcercisenumber"
         android:layout_width="22dp"
         android:layout_height="21dp"
-        android:layout_marginStart="44dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="13dp"
         android:background="@drawable/nontification"
-        android:text="20"
-        app:layout_constraintEnd_toStartOf="@+id/addprivate"
-        app:layout_constraintHorizontal_bias="0.764"
-        app:layout_constraintStart_toEndOf="@+id/text"
+        android:text="0"
+        app:layout_constraintEnd_toEndOf="@+id/listselect"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/listselect"
         app:layout_constraintTop_toTopOf="@+id/listselect" />
 
     <ImageView
