--- a/app/src/main/res/layout/barselect.xml
+++ b/app/src/main/res/layout/barselect.xml
@@ -55,14 +55,12 @@
         android:id="@+id/buttonfoodnumber"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:layout_marginStart="44dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="13dp"
         android:background="@drawable/nontification"
-        android:text="1"
-        app:layout_constraintEnd_toStartOf="@+id/addprivate"
+        android:text="0"
+        app:layout_constraintEnd_toEndOf="@+id/listselect"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/text"
+        app:layout_constraintStart_toStartOf="@+id/listselect"
         app:layout_constraintTop_toTopOf="@+id/listselect" />
 
     <ImageView
